tooling/nargo_cli/tests/snapshots/execute__tests__tuples_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "8559944045094719852",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/8VVu27DMAykX2nVoB3aLl06tEu7yXmPGZIPERL4O/zpgRESoS9WhoRKCBiyQfrueKLljI6R8dVFyWtO5yE1a179bVEbYvmUOrNEOnsmZxQPyf3z6uD9Ll8YNuyA1xJ/5WcLN9Cfof6pU5gJ8CeCX6bB90+Ms2n7+AS8r9T/ePU7ktMztuXcM+fl/o3vHeCl2Hetydq3jwH9wjXmXn+h10L5Y6Sjxn2qIr7qnNR+gr4qkVfvCpeAC+fb0BuPXBWdzwT6JrVfoG90R29GwJ3bezOJ9a+9ySEntd+g7xFzE9N4ae6l9gf0pzpbh/QL15hO/9aytedfrrwX3qI9+aDPIAL+Cur/+Pkl0sf6Sp3NMtTNNDRhHvb72S6gT13os/QAjDQJJj0KAAA=",
  "debug_symbols": "ldPLCoQgFAbgdznrFl66WK8yDIOVhSAaZgND9O6jg4to2pyNcOT/XHj4dxhVv80vbSe3QvfYwbhBBu1snPajgN5rY/T8Ol8DSQetfvl1kTaNa5A+QFeXBSg7QtdUUU/aKOgqcjwLoDUy3yDzAplvcXlG7vKizXlKyBVQLGBYwLGgxILbJbNGZMGEuIoaLRq0EGjRYgW/XTcnLAtO/gRFC4YWHCeOOL2l17I3Kjd62uxwKnj4LOrS9cW7QY2bV6n1p8KnH+FVUZL4bHz6Cw==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: Field) {\n    let pair = (x, y);\n    assert(pair.0 == 1);\n    assert(pair.1 == 0);\n\n    let (a, b) = if true { (0, 1) } else { (2, 3) };\n    assert(a == 0);\n    assert(b == 1);\n\n    let (u, v) = if x as u32 < 1 { (x, x + 1) } else { (x + 1, x) };\n    assert(u == x + 1);\n    assert(v == x);\n    // Test mutating tuples\n    let mut mutable = ((0, 0), 1, 2, 3);\n    mutable.0 = (x, y);\n    mutable.2 = 7;\n    assert(mutable.0.0 == 1);\n    assert(mutable.0.1 == 0);\n    assert(mutable.1 == 1);\n    assert(mutable.2 == 7);\n    assert(mutable.3 == 3);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
