tooling/nargo_cli/tests/snapshots/execute__tests__u16_support_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15689429468741565875",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 16
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "14514982005979867414": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9Vc0VbbRhAdyTJGNiQkNiQttEmbNCmBgNaysXzywkPP6XcYbL32F/IPfe4H9VP60m+ol2pgPF67aXyHI885QvLu6u69M7MjGSQi+tcG8+3X6jiab41q7+1gviXV55iWjcddV/tsM3NArCxAF4PtsiwO+CDWDvTbrmqLqzZpDUMn5tnVYDAb9Wcud5OsP74phtlgeHNVuMINi+G0X+T5rBgUo/HNeJSN3SCfuXI4zmelt8xFAKyyIhbjNGaPmZQ43uWjJSXnVMIOadBycvKxH2SdlDHhkrJBuKRMgMH1WLHwnbT6JqVhpcyywhC7Hwnfcv4259vOfGtVbel8a8+3znzb48Gc+E1aXgw7gbZWoG030JYG2tqBtk6gbY8ekoQtxToMsgh54TQJtaDLcgeHNW3hsMa7OCyXwrBmrg3DunUdGFbh9ghblMBFs79XrbMYizvYA66rfaBeAx86Ix/2kT58AtRLwrTmTXl2gFhPwZrB8b2rM8Dcdj7GTwP5vakfD6jeNczzOzDQ/azeup2V7udg3WzoWtEGYnWp3rXCawXmo/Mx7hrkTo/qXSs8v56B7sN663ZWuo9oO2pFCsR6QfWuFV4rMB+dj/ELg9x5SfWuFZ7fSwPd39Rbt7PS/S1tR63YBWIdU71rhdcKzEfnY3xskDsnVO9a4fmdGOj+rt66nZXu72k7akULiPWK6l0rvFZgPjof41cGufOa6l0rPL/XBrp/qLduZ6X7R9qOWrEDxHpD9a4VXiswH52P8RuD3HlL9a4Vnt9bA90/1Vu3s9L9jrajVjSBWO8JWyusNCMfYvmZ6l0ffXyBa9D5vH5vsF5Oqd51wsf51ED3B6Du0JN5Fo+JfhD4KO4UMAC28z+kP86q/Tk7hx8C8h1/GzsNVcj8Qx8e9wyYiOe0HRcspOaPSvMmeDKXPla5lNDiM93S0IXkDKyF7cKS8AWFr3ibYF8QbuFeAvVa+fCSwgVrE+xLsr0aI4rVpQFuBtQtC4LHfUaLZnGHgsxVK57nhLkA+qdE/0+BzTYzh7xDlXydJWH5PWpTp8vn9le9AEJYDcW2BFT6os9+ZtKcob7jQLXlVZs09Asgp8Dg50CsARBL+nQgfGrxPbVvgJuTzaJB334j87KPw7orSjLe0iy+zqF4L5BcJ4ICfZ+q/dFff3Q//f7bn9yeqH5+mSUWGA2gQ1LFDYlfzNMzpWUfAPnn/PKQpX8Y0wD/7o/D3n75/ICvtZDY87jQOfv08IKUHrNb9fPxk+o4VedYxN8wPlk3wJ/n6lRaj5RWIy75Pi3GTBr3yTohOWvTGJK313QicPU4Evp5/SWf8ZpHxcPtcKPCb1JYfyL65fjj6nNb8WdfXX8lz3I0cWU+KSfDyXQ6uJ08V/jeVuWJfOuXz4nUsXw1nQLj4xU4scKJVHu7Og6tSW8phfPo+iv9tGguYzyOk37Zk9T8IT5EuPrbVHzeVXsfr2INhxjHodA+SUSM4oBPNOczxXNHnIOshTrH9Vy6NsYBv+mcb/yH5khp5vGZ0tx8RM1NNbdeu6C5y3VrN1TnQ3yAeZptGrOR4pk8Ysx4rg7hrwW346tynOc3Lh9PZ2N39SXXAvYDKT5AP/RTMacB/v29pbS2OO6oPvZBEjgvWvE5Vvt1Y6M1uPuBPsbsVnvJl3Xwr2bZl1Z1hvGNavf997CWDX4eygXZdn9fJuYndcycUuVzMNdJFODXUHNqjnJMKH/1bzwT1d74grGh/OW+gwA/fV4a4CrbOLdCa0HHRf7njhBWS/TL8S011iqG3QCnaMXchzYc7tdUzwY/WF8PxXFP6ZR5dQ3iwHicA01atlj18Vh9nYvw/JzmEqovbJwzPdHG/vwHURoDkHhNAAA=",
  "debug_symbols": "tZnbauswEEX/Rc9+sOZiyfmVQylO4haDcYKTHCgh/1671CV1heiQ7peAYu0lsFkaRrq6fbu9vD53w8vh5Db/rq4/7Jpzdxim0dX5j79Ox2aYR6dzM57dhqhw7bB3G+Zb4V66vnUbLW/Fj4lcf82s6/upT4UjGJlhZIGR9TFyiJ8zpSxX5ApGDjByhJFrGNmXOLTHoQmHZhxacGiciR6nose56HEyepyNhLORcDYSzkbC2Ug4GwlnI+FsJJyNhLORcDYyzkbG2cg4GxlnI+NsZJyNjLORcTYyzkbG2Sg4GwVno+BsFJyNgrNRcDYKzkbB2Sg4GwVno+JsVJyNirNRcTYqzkbF2ag4GxVno+JsVJyN1WM2iucFTbxGP2ajcFjQqms04dCMQwsOrTh0hUMHHDri0PVfoau4QoekjXEJeE/fAtNgO3Z9370+f7vEKOef9MGeD1+wuF49fV6XTQRzIpoTtTWRPgvLJpJrZO9cSnPCmxPJXc7eZtu7Z3tTbO917S2svTPNlad0w5lLpPvIbMKbE2ROJL95bgNL92i5fSndemUTlTkRzInkN1e/GKU/31VtTaS7lftE/FUTkk2QOcHmhNgSt2n0vxm7Ztu3c02ZH16G3VJipuH57bg8WYrQcTzs2v1lbOdydFeJ5nc41UcKT593e1oVGqc1pnXeAQ==",
  "file_map": {
    "50": {
      "source": "fn main(x: u16) {\n    test_u16(x);\n    // Safety: testing context\n    unsafe {\n        test_u16_unconstrained(x);\n    }\n}\n\nunconstrained fn test_u16_unconstrained(x: u16) {\n    test_u16(x)\n}\n\nfn test_u16(x: u16) {\n    let t1: u16 = 1234;\n    let t2: u16 = 4321;\n    let t = t1 + t2;\n\n    let t4 = t - t2;\n    assert(t4 == t1);\n\n    let mut small_int = x as u16;\n    let shift = small_int << (x as u8);\n    assert(shift == 8);\n    assert(shift >> (x as u8) == small_int);\n    assert(shift >> 15 == 0);\n    assert(shift << 15 == 0);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/u16_support/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "test_u16_unconstrained",
    "directive_integer_quotient",
    "directive_to_radix",
    "directive_invert"
  ]
}
